environment/resources-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resources-api
spec:
  selector:
    app: resources-api
    env: stepzen-playground
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
